# csidh-target

./: .gitignore  README.md
scripts/: class.IsogenyBSIDH.sage  class.IsogenyEC.sage  class.IsogenyMC.sage  class.IsogenySIKE.sage  class.MontgomeryCurve.sage  class.PointMC.sage  class.ProjectivePointEC.sage  csidh.ipynb  csidh.py  csidh.sage  csidh.sage.py  fp.py  imple.sage  init.ipynb  xmul.py  (+5 more)
src/: .clang-format  CMakeLists.txt  Makefile  compile_commands.json  csidh.c  csidh.h  fp.c  fp.h  main-CWLITEARM.eep  main-CWLITEARM.lss  main-CWLITEARM.sym  main.c  mont.c  mont.h  parametrization.c  parametrization.h  params.h  randombytes.c  sendfn.h  systick.c  systick.h  uint.c  uint.h
src/.clangd/index/: csidh.c.BDCC04117798E028.idx  csidh.h.6FB3D3DB3EF59363.idx  fp.c.0A004B0A6E3CB1D4.idx  fp.h.1C5E9A547537C753.idx  main.c.784483CA4B20E9BC.idx  mont.c.CD96A536ABAB617D.idx  mont.h.77EF9077BB3F9136.idx  parametrization.c.A361326E3945607D.idx  parametrization.h.BC5789825524CE3A.idx  randombytes.c.ACF4C4956E76C902.idx  randombytes.h.71538C7F3553090B.idx  simpleserial.c.B4915EEF97C14892.idx  simpleserial.h.47E12EBFC68A8336.idx  stm32f3_hal.c.B3483C67395364E6.idx  stm32f3_hal_lowlevel.c.C5A97E1D1EC74358.idx  stm32f3_startup.S.20B0D576F0ED1004.idx  stm32f3_sysmem.c.B9AD6B82D521A621.idx  uint.c.FDF75BA584CB791B.idx  uint.h.33C951F3333DDD1E.idx
src/objdir/: csidh.lst  fp.lst  main.lst  mont.lst  parametrization.lst  randombytes.lst  simpleserial.lst  stm32f3_hal.lst  stm32f3_hal_lowlevel.lst  stm32f3_startup.lst  stm32f3_sysmem.lst  uint.lst
src/simpleserial/: simpleserial.h
(+21 files in other folders)
